--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=config-client
+server.port=8081
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
