--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=config-service
+port=8080
+spring.datasource.url=jdbc:postgresql://postgres:5432/configdb
+spring.datasource.username=user
+spring.datasource.password=123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.data.redis.host=redis
+spring.data.redis.port=6379
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
