--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=config-client
-server.port=8081
+server.port=8082
+app.kafka.topics.config-updates=config-updates
 spring.kafka.bootstrap-servers=kafka:9092
-spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.group-id=config-update-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JacksonJsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.type.mapping=com.mzuha.configservice.model.ConfigResponse:com.mzuha.configclient.model.ConfigResponse
