--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 spring.application.name=config-service
-port=8080
+server.port=8081
 spring.datasource.url=jdbc:postgresql://postgres:5432/configdb
-spring.datasource.username=user
-spring.datasource.password=123
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=admin
+spring.datasource.password=pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-spring.data.redis.host=redis
-spring.data.redis.port=6379
+spring.data.redis.sentinel.master=redis-master
+spring.data.redis.sentinel.nodes=redis-sentinel:26379
 spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JacksonJsonSerializer
+app.kafka.topics.config-updates=config-updates
+spring.kafka.producer.retries=3
+spring.kafka.producer.properties.retry.backoff.ms=1000
+spring.kafka.producer.properties.delivery.timeout.ms=120000
+spring.kafka.producer.properties.max.in.flight.requests.per.connection=5
+spring.kafka.producer.acks=all
+
