--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,46 @@
 services:
   postgres:
-    image: postgres:15
+    image: postgres:15-alpine
     environment:
       POSTGRES_DB: configdb
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: 123
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: pass
     ports:
       - "5432:5432"
   
-  redis:
-    image: redis:alpine
+  redis-master:
+    image: bitnami/redis:latest
+    environment:
+      - REDIS_REPLICATION_MODE=master
+      - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - "6379:6379"
+  
+  redis-slave:
+    image: bitnami/redis:latest
+    environment:
+      - REDIS_REPLICATION_MODE=slave
+      - REDIS_MASTER_HOST=redis-master
+      - REDIS_MASTER_PORT_NUMBER=6379
+      - ALLOW_EMPTY_PASSWORD=yes
+    depends_on:
+      - redis-master
+  
+  redis-sentinel:
+    image: bitnami/redis-sentinel:latest
+    environment:
+      - REDIS_MASTER_HOST=redis-master
+      - REDIS_MASTER_PORT_NUMBER=6379
+      - REDIS_MASTER_SET=redis-master
+      - REDIS_SENTINEL_QUORUM=1
+      - ALLOW_EMPTY_PASSWORD=yes
+      - REDIS_SENTINEL_DOWN_AFTER_MILLISECONDS=3000
+      - REDIS_SENTINEL_FAILOVER_TIMEOUT=10000
+    depends_on:
+      - redis-master
+      - redis-slave
+    ports:
+      - "26379:26379"
   
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -40,7 +69,7 @@ services:
     depends_on:
       - kafka
     ports:
-      - "8082:8082"
+      - "8080:8080"
     environment:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
@@ -49,19 +78,14 @@ services:
     build: "./config-service"
     depends_on:
       - postgres
-      - redis
+      - redis-sentinel
       - kafka
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/configdb
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     ports:
-      - "8080:8080"
+      - "8081:8081"
   
   config-client:
     build: "./config-client"
     depends_on:
       - kafka
-    environment:
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     ports:
-      - "8081:8081"
+      - "8082:8082"
