--- a/config-service/Dockerfile
+++ b/config-service/Dockerfile
@@ -1,5 +1,10 @@
+FROM gradle:8.5-jdk21-alpine AS build
+WORKDIR /app
+COPY . .
+RUN ./gradlew :config-service:clean bootJar --no-daemon
+
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-COPY build/libs/config-service-*.jar app.jar
-EXPOSE 8080
+COPY --from=build /app/config-service/build/libs/*.jar app.jar
+EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "app.jar"]
