--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.kafka.producer.properties.retry.backoff.ms=1000
 spring.kafka.producer.properties.delivery.timeout.ms=120000
 spring.kafka.producer.properties.max.in.flight.requests.per.connection=5
 spring.kafka.producer.acks=all
-
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
