--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JacksonJsonSerializer
 app.kafka.topics.config-updates=config-updates
+app.kafka.notify-config-updates=true
 spring.kafka.producer.retries=3
 spring.kafka.producer.properties.retry.backoff.ms=1000
 spring.kafka.producer.properties.delivery.timeout.ms=120000
