refactor Dockerfiles for multi-stage builds, migrate to Testcontainers

--- a/config-client/Dockerfile
+++ b/config-client/Dockerfile
@@ -1,10 +1,25 @@
-FROM gradle:8.5-jdk21-alpine AS build
+FROM gradle:8.5-jdk21-alpine AS builder
 WORKDIR /app
-COPY . .
-RUN ./gradlew :config-client:clean bootJar --no-daemon
+
+COPY gradlew .
+COPY gradle gradle
+COPY build.gradle.kts .
+COPY settings.gradle.kts .
+COPY config-client/build.gradle.kts config-client/
+COPY config-service/build.gradle.kts config-service/
+
+RUN ./gradlew :config-client:dependencies --no-daemon
+
+COPY config-client/src config-client/src
+RUN ./gradlew :config-client:bootJar --no-daemon -x test
 
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-COPY --from=build /app/config-client/build/libs/*.jar app.jar
+
+RUN addgroup -S spring && adduser -S spring -G spring
+USER spring:spring
+
+COPY --from=builder /app/config-client/build/libs/*.jar app.jar
+
 EXPOSE 8082
 ENTRYPOINT ["java", "-jar", "app.jar"]
