--- a/config-service/Dockerfile
+++ b/config-service/Dockerfile
@@ -1,10 +1,25 @@
-FROM gradle:8.5-jdk21-alpine AS build
+FROM gradle:8.5-jdk21-alpine AS builder
 WORKDIR /app
-COPY . .
-RUN ./gradlew :config-service:clean bootJar --no-daemon
+
+COPY gradlew .
+COPY gradle gradle
+COPY build.gradle.kts .
+COPY settings.gradle.kts .
+COPY config-client/build.gradle.kts config-client/
+COPY config-service/build.gradle.kts config-service/
+
+RUN ./gradlew :config-service:dependencies --no-daemon
+
+COPY config-service/src config-service/src
+RUN ./gradlew :config-service:bootJar --no-daemon -x test
 
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-COPY --from=build /app/config-service/build/libs/*.jar app.jar
-EXPOSE 8081
+
+RUN addgroup -S spring && adduser -S spring -G spring
+USER spring:spring
+
+COPY --from=builder /app/config-service/build/libs/*.jar app.jar
+
+EXPOSE 8082
 ENTRYPOINT ["java", "-jar", "app.jar"]
