--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JacksonJsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
-spring.kafka.consumer.properties.spring.json.type.mapping=com.mzuha.configservice.model.ConfigResponse:com.mzuha.configclient.model.ConfigResponse
+spring.kafka.consumer.properties.spring.json.type.mapping=com.mzuha.configservice.model.ConfigEvent:com.mzuha.configclient.model.ConfigEvent
